<resources>
    <string name="app_name">LocalShop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="profile_name">AryaFP</string>
    <string name="logout">Logout</string>
    <string name="profile_email">aryafito@gmail.com</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign out</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="jenis">Jenis</string>
    <string name="jumlah">Jumlah</string>
    <string name="harga">Harga</string>
    <string name="url">Url</string>
    <string name="selamat_datang">Selamat Datang User</string>
    <string name="tersedia">Tersedia</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>