<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:text="id"/>

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Nama"/>

        <TextView
            android:id="@+id/tv_jenis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/jenis" />

        <TextView
            android:id="@+id/tv_jumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/jumlah" />

        <TextView
            android:id="@+id/tv_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/harga" />

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/url" />

    </LinearLayout>

</androidx.cardview.widget.CardView>